# CmakeSimple

./: CMakeLists.txt
src/: Main.cpp
